# PersistenciaT3

./: .gitignore  README.md  database.py  divisao_tarefas.txt  guia.txt  hello.py  main.py  pop.txt  pyproject.toml  validaçãoTeste.py
models/: estoque.py  fornecedor.py  remedio.py
routes/: estoque.py  fornecedor.py  home.py  remedio.py
