[project]
name = "persistenciat3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dnspython>=2.7.0",
    "fastapi[all,standard]>=0.115.8",
    "httpx>=0.28.1",
    "motor[srv]>=3.7.0",
    "odmantic>=1.0.2",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
]
